<resources>
    <string name="app_name">GroceryApp</string>
    <string name="COD">APP CONTENT INFO</string>
    <string name="policy">NOTE: \u0020You agree with our User Agreement and Privacy Policy.</string>
    <string name="new_user">No Account yet?<font size="10"></font><b>\u0020Create one</b></string>
    <string name="sign_in">Already a user!<font size="10"></font><b>\u0020LogIn</b></string>
    <string name="sign_up">Every day you get the best deal</string>
    <string name="title_myprofile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_offers">Offers</string>
    <string name="nav_account">Account</string>
    <string name="nav_order">Your Orders</string>
    <string name="nav_wallet">Your Wallet</string>
    <string name="nav_cart">Your Cart</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_customer">Customer Services</string>
    <string name="nav_contact">Contact Us</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="add_monet_wallet">Add Money To Wallet</string>
    <string name="offer_points">Offer Points</string>
    <string name="wallet_transactions">Wallet Transactions</string>
    <string name="points_demo">200 pt</string>
    <string name="amount_mrp_demo">\u20B9350</string>
    <string name="amount_mrp_off">30\% OFF</string>
    <string name="amount_demo">\u20B9400</string>
    <string name="Rs">\u20B9  </string>
    <string name="mrp">MRP :</string>
    <string name="wallet_see_all">See All</string>
    <string name="request_statement">Request Transaction Statement</string>
    <string name="wallet_terms">Wallet Terms </string>
    <string name="wallet_info">The MilkGrocery Wallet is a pre-paid credit wallet that is associated with the account.
        Wallet allows you to pay the amount in a hassle free manner. You can shop multiple times without adding your card details every time you order yor groceries.\n\nAmount is automatically deducted from your "Wallet" at the time of checkout until you run out of cash.
        \n\nWallet also gets automatically credited when cash-back is issued,or return order credits etc.</string>
    <string name="total_order_items">Items : </string>
    <string-array name="noida_sector_list">
        <item>Select your Sector</item>
        <item>Chhajarsi Colony</item>
        <item>Dadri Road</item>
        <item name="Garhi Samastpur">Garhi Samastpur</item>
        <item name="Noida-Greater Noida Expressway">Noida-Greater Noida Expressway</item>
        <item name="Sorkha">Sorkha</item>
        <item name="Sector-1">Sector-1</item>
        <item name="Sector-2">Sector-2</item>
        <item name="Sector-3">Sector-3</item>
        <item name="Sector-4">Sector-4</item>
        <item name="Sector-5">Sector-5</item>
        <item name="Sector-6">Sector-6</item>
        <item name="Sector-7">Sector-7</item>
        <item name="Sector-8">Sector-8</item>
        <item name="Sector-9">Sector-9</item>
        <item name="Sector-10">Sector-10</item>
        <item name="Sector-11">Sector-11</item>
        <item name="Sector-12">Sector-12</item>
        <item name="Sector-14">Sector-14</item>
        <item name="Sector-14 A">Sector-14 A</item>
        <item name="Sector-15">Sector-15</item>
        <item name="Sector-15 A">Sector-15 A</item>
        <item name="Sector-16">Sector-16</item>
        <item name="Sector-16 A">Sector-16 A</item>
        <item name="Sector-16 B">Sector-16 B</item>
        <item name="Sector-17">Sector-17</item>
        <item name="Sector-18">Sector-18</item>
        <item name="Sector-19">Sector-19</item>
        <item name="Sector-20">Sector-20</item>
        <item name="Sector-21">Sector-21</item>
        <item name="Sector-22">Sector-22</item>
        <item name="Sector-23">Sector-23</item>
        <item name="Sector-24">Sector-24</item>
        <item name="Sector-25">Sector-25</item>
        <item name="Sector-25 A">Sector-25 A</item>
        <item name="Sector-26">Sector-26</item>
        <item name="Sector-27">Sector-27</item>
        <item name="Sector-28">Sector-28</item>
        <item name="Sector-29">Sector-29</item>
        <item name="Sector-30">Sector-30</item>
        <item name="Sector-31">Sector-31</item>
        <item name="Sector-32">Sector-32</item>
        <item name="Sector-33">Sector-33</item>
        <item name="Sector-34">Sector-34</item>
        <item name="Sector-35">Sector-35</item>
        <item name="Sector-36">Sector-36</item>
        <item name="Sector-37">Sector-37</item>
        <item name="Sector-38">Sector-38</item>
        <item name="Sector-39">Sector-39</item>
        <item name="Sector-40">Sector-40</item>
        <item name="Sector-41">Sector-41</item>
        <item name="Sector-42">Sector-42</item>
        <item name="Sector-43">Sector-43</item>
        <item name="Sector-44">Sector-44</item>
        <item name="Sector-45">Sector-45</item>
        <item name="Sector-46">Sector-46</item>
        <item name="Sector-47">Sector-47</item>
        <item name="Sector-48">Sector-48</item>
        <item name="Sector-49">Sector-49</item>
        <item name="Sector-50">Sector-50</item>
        <item name="Sector-51">Sector-51</item>
        <item name="Sector-52">Sector-52</item>
        <item name="Sector-53">Sector-53</item>
        <item name="Sector-54">Sector-54</item>
        <item name="Sector-55">Sector-55</item>
        <item name="Sector-56">Sector-56</item>
        <item name="Sector-57">Sector-57</item>
        <item name="Sector-58">Sector-58</item>
        <item name="Sector-59">Sector-59</item>
        <item name="Sector-60">Sector-60</item>
        <item name="Sector-61">Sector-61</item>
        <item name="Sector-62">Sector-62</item>
        <item name="Sector-62 A">Sector-62 A</item>
        <item name="Sector-63">Sector-63</item>
        <item name="Sector-64">Sector-64</item>
        <item name="Sector-65">Sector-65</item>
        <item name="Sector-66">Sector-66</item>
        <item name="Sector-67">Sector-67</item>
        <item name="Sector-68">Sector-68</item>
        <item name="Sector-69">Sector-69</item>
        <item name="Sector-70">Sector-70</item>
        <item name="Sector-71">Sector-71</item>
        <item name="Sector-72">Sector-72</item>
        <item name="Sector-73">Sector-73</item>
        <item name="Sector-74">Sector-74</item>
        <item name="Sector-75">Sector-75</item>
        <item name="Sector-76">Sector-76</item>
        <item name="Sector-77">Sector-77</item>
        <item name="Sector-78">Sector-78</item>
        <item name="Sector-79">Sector-79</item>
        <item name="Sector-80">Sector-80</item>
        <item name="Sector-81">Sector-81</item>
        <item name="Sector-82">Sector-82</item>
        <item name="Sector-83">Sector-83</item>
        <item name="Sector-84">Sector-84</item>
        <item name="Sector-85">Sector-85</item>
        <item name="Sector-85 A">Sector-85 A</item>
        <item name="Sector-86">Sector-86</item>
        <item name="Sector-87">Sector-87</item>
        <item name="Sector-88">Sector-88</item>
        <item name="Sector-89">Sector-89</item>
        <item name="Sector-90">Sector-90</item>
        <item name="Sector-91">Sector-91</item>
        <item name="Sector-92">Sector-92</item>
        <item name="Sector-92 A">Sector-92 A</item>
        <item name="Sector-92 B">Sector-92 B</item>
        <item name="Sector-93">Sector-93</item>
        <item name="Sector-94">Sector-94</item>
        <item name="Sector-95">Sector-95</item>
        <item name="Sector-96">Sector-96</item>
        <item name="Sector-97">Sector-97</item>
        <item name="Sector-98">Sector-98</item>
        <item name="Sector-99">Sector-99</item>
        <item name="Sector-100">Sector-100</item>
        <item name="Sector-101">Sector-101</item>
        <item name="Sector-102">Sector-102</item>
        <item name="Sector-104">Sector-104</item>
        <item name="Sector-105">Sector-105</item>
        <item name="Sector-106">Sector-106</item>
        <item name="Sector-107">Sector-107</item>
        <item name="Sector-108">Sector-108</item>

        <item name="Sector-110">Sector-110</item>
        <item name="Sector-112">Sector-112</item>
        <item name="Sector-113">Sector-113</item>
        <item name="Sector-115">Sector-115</item>
        <item name="Sector-116">Sector-116</item>
        <item name="Sector-117">Sector-117</item>
        <item name="Sector-118">Sector-118</item>
        <item name="Sector-119">Sector-119</item>
        <item name="Sector-120">Sector-120</item>
        <item name="Sector-121">Sector-121</item>
        <item name="Sector-122">Sector-122</item>
        <item name="Sector-123">Sector-123</item>
        <item name="Sector-124">Sector-124</item>
        <item name="Sector-125">Sector-125</item>
        <item name="Sector-126">Sector-126</item>
        <item name="Sector-127">Sector-127</item>
        <item name="Sector-128">Sector-128</item>
        <item name="Sector-129">Sector-129</item>
        <item name="Sector-130">Sector-130</item>
        <item name="Sector-131">Sector-131</item>
        <item name="Sector-132">Sector-132</item>
        <item name="Sector-133">Sector-133</item>
        <item name="Sector-134">Sector-134</item>
        <item name="Sector-136">Sector-136</item>
        <item name="Sector-137">Sector-137</item>
        <item name="Sector-138">Sector-138</item>
        <item name="Sector-139">Sector-139</item>
        <item name="Sector-140">Sector-140</item>
        <item name="Sector-140 A">140 A</item>
        <item name="Sector-141">Sector-141</item>
        <item name="Sector-142">Sector-142</item>
        <item name="Sector-143">Sector-143</item>
        <item name="Sector-143 A">Sector-143 A</item>
        <item name="Sector-143 B">Sector-143 B</item>
        <item name="Sector-144">Sector-144</item>
        <item name="Sector-145">Sector-145</item>
        <item name="Sector-146">Sector-146</item>
        <item name="Sector-147">Sector-147</item>
        <item name="Sector-148">Sector-148</item>
        <item name="Sector-149">Sector-149</item>
        <item name="Sector-150">Sector-150</item>
        <item name="Sector-151">Sector-151</item>
        <item name="Sector-152">Sector-152</item>
        <item name="Sector-153">Sector-153</item>
        <item name="Sector-154">Sector-154</item>
        <item name="Sector-155">Sector-155</item>
        <item name="Sector-156">Sector-156</item>
        <item name="Sector-157">Sector-157</item>
        <item name="Sector-158">Sector-158</item>
        <item name="Sector-159">Sector-159</item>
        <item name="Sector-160">Sector-160</item>
        <item name="Sector-161">Sector-161</item>
        <item name="Sector-162">Sector-162</item>
        <item name="Sector-163">Sector-163</item>
        <item name="Sector-164">Sector-164</item>
        <item name="Sector-165">Sector-165</item>
        <item name="Sector-166">Sector-166</item>
        <item name="Sector-167">Sector-167</item>
        <item name="Sector-167 B">Sector-167 B</item>
    </string-array>
    <string name="product_price"><strike>MRP :\u0020Rs\u002080</strike></string>
    <string name="product_weight">1Kg Packet</string>
</resources>