<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_dash_back"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:theme="@style/AppTheme.NoAction">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="@dimen/zero">

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout  android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:paddingTop="@dimen/margin_15dp"
                android:paddingStart="@dimen/margin_15dp"
                android:paddingEnd="@dimen/margin_15dp"
                android:paddingBottom="@dimen/margin_10dp"
                android:orientation="vertical"
                android:background="@color/window_background">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_wallet"
                        android:layout_width="@dimen/wallet_icon_size"
                        android:layout_height="@dimen/wallet_icon_size"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_wallet_outline_black"
                        android:contentDescription="@string/COD"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_wallet"
                        android:layout_marginStart="@dimen/margin_15dp"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">

                        <in.vibescom.groceryapp.UI.Views.SFDRTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color_regular"
                            android:textSize="@dimen/text_size_xlarge"
                            android:layout_centerVertical="true"
                            android:text="@string/wallet_balance"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true">

                            <in.vibescom.groceryapp.UI.Views.SFDRTextView
                                android:id="@+id/tv_rupee"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black_color"
                                android:textSize="@dimen/text_size_rupee"
                                android:text="@string/Rs" />

                            <in.vibescom.groceryapp.UI.Views.SFDRTextView
                                android:id="@+id/tv_wallet_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black_color"
                                android:textSize="@dimen/text_size_amount"
                                android:text="4000" />

                        </LinearLayout>

                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:layout_height="60dp">

                    <in.vibescom.groceryapp.UI.Views.SFDREditText
                        android:id="@+id/et_add_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/customEditText"
                        android:layout_toStartOf="@+id/btn_add_money"
                        android:layout_marginEnd="@dimen/margin_10dp"
                        android:layout_centerVertical="true"
                        android:hint="@string/add_monet_wallet"
                        android:textSize="@dimen/text_size_xxlarge"
                        android:paddingStart="@dimen/margin_10dp"
                        android:paddingEnd="@dimen/margin_10dp"
                        android:inputType="numberDecimal"
                        android:background="@drawable/canvas_edittext_round_corner"
                        android:textCursorDrawable="@drawable/canvas_color_cursor"/>

                    <in.vibescom.groceryapp.UI.Views.SFDRButton
                        android:id="@+id/btn_add_money"
                        android:layout_width="@dimen/round_btn_size"
                        android:layout_height="@dimen/round_btn_size"
                        android:text="+"
                        android:textSize="@dimen/text_size_xxlarge"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/text_color_white"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/canvas_circle_blue"/>

                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:padding="@dimen/margin_15dp"
                android:background="@color/window_background">

                <ImageView
                    android:id="@+id/iv_offers"
                    android:layout_width="@dimen/wallet_icon_size"
                    android:layout_height="@dimen/wallet_icon_size"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_gift_outlined_black"
                    android:contentDescription="@string/COD"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_offers"
                    android:layout_marginStart="@dimen/margin_15dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <in.vibescom.groceryapp.UI.Views.SFDRTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textColor="@color/text_color_regular"
                        android:textSize="@dimen/text_size_xlarge"
                        android:text="@string/offer_points"/>

                    <in.vibescom.groceryapp.UI.Views.SFDRTextView
                        android:id="@+id/tv_offer_pts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/black_color"
                        android:textSize="@dimen/text_size_amount"
                        android:text="@string/points_demo"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:padding="@dimen/margin_15dp"
                android:orientation="vertical"
                android:background="@color/window_background">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <in.vibescom.groceryapp.UI.Views.SFDRTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_regular"
                        android:textSize="@dimen/text_size_xxlarge"
                        android:textStyle="bold"
                        android:text="@string/wallet_transactions"/>

                    <in.vibescom.groceryapp.UI.Views.SFDRTextView
                        android:id="@+id/wallet_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAllCaps="true"
                        android:textSize="@dimen/text_size_normal"
                        android:text="@string/wallet_see_all"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_wallet_transactions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    android:layout_marginTop="@dimen/margin_10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_size"
                    android:layout_marginTop="3dp"
                    android:background="@color/divider_color" />

                <RelativeLayout
                    android:id="@+id/view_wallet_statement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp">

                    <in.vibescom.groceryapp.UI.Views.SFDRTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_regular"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/request_statement"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:id="@+id/iv_arrow"
                        android:layout_width="@dimen/margin_25dp"
                        android:layout_height="@dimen/margin_25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/margin_5dp"
                        android:contentDescription="@string/COD"
                        android:src="@drawable/ic_arrow"
                        android:tint="@color/verified_color" />

                </RelativeLayout>
            </LinearLayout>

            <in.vibescom.groceryapp.UI.Views.SFDRTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_regular"
                android:layout_marginStart="@dimen/margin_15dp"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:text="@string/wallet_terms"/>

            <in.vibescom.groceryapp.UI.Views.SFDRTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginEnd="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:text="@string/wallet_info"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>